# electricdb

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
src/: CMakeLists.txt
src/catalog/: CMakeLists.txt
src/execution/: CMakeLists.txt
src/execution/engine/: CMakeLists.txt
src/execution/expressions/: CMakeLists.txt  binary_expression.cpp  leaf_expression.cpp  unary_expression.cpp
src/execution/memory/: CMakeLists.txt
src/execution/operators/: CMakeLists.txt
src/execution/operators/aggregate/: CMakeLists.txt
src/execution/operators/filter/: CMakeLists.txt
src/execution/operators/join/: CMakeLists.txt
src/execution/operators/projection/: CMakeLists.txt
src/execution/operators/scan/: CMakeLists.txt
src/execution/operators/sort/: CMakeLists.txt
src/execution/vector/: CMakeLists.txt  nullmask.cpp  selection_vector.cpp  vector.cpp
src/include/electricdb/common/: constants.h  types.h
src/include/electricdb/execution/context/: execution_context.h
src/include/electricdb/execution/expressions/: binary_expression.h  expression.h  leaf_expression.h  type_dispatch.h  unary_expression.h
src/include/electricdb/execution/vector/: nullmask.h  selection_vector.h  vector.h
src/include/electricdb/util/: arena.h  hash.h  simd.h  stopwatch.h
src/io/: CMakeLists.txt
src/main/: cli.cpp
src/planner/: CMakeLists.txt
src/planner/logical/: CMakeLists.txt
src/planner/physical/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/sql/: CMakeLists.txt
src/sql/analyzer/: CMakeLists.txt
src/sql/binder/: CMakeLists.txt
src/sql/parser/: CMakeLists.txt
src/storage/: CMakeLists.txt
src/storage/column/: CMakeLists.txt
src/storage/encoding/: CMakeLists.txt
src/storage/format/: CMakeLists.txt
src/storage/gc/: CMakeLists.txt
src/storage/table/: CMakeLists.txt
src/util/: CMakeLists.txt  arena.cpp  hash.cpp
tests/: CMakeLists.txt
tests/execution/: CMakeLists.txt
tests/execution/expressions/: CMakeLists.txt  binary_expression_test.cpp  leaf_expression_test.cpp  unary_expression_test.cpp
tests/execution/vector/: CMakeLists.txt  nullmask_test.cpp  selection_vector_test.cpp  vector_test.cpp
tests/util/: CMakeLists.txt  arena_test.cpp
